[WI-1663][FIX][Submit button in background] Refactoring the way that modals and covers work. They now disable scrolling and set themselves to 100% height via a no-scroll class on the body

--- a/nh_eobs_mobile/static/dev/less/src/modal.less
+++ b/nh_eobs_mobile/static/dev/less/src/modal.less
@@ -384,6 +384,11 @@ Styleguide 2.4.2
   }
 }
 
+body.no-scroll{
+  overflow: hidden;
+  height: 100%;
+}
+
 .cover{
   display: inline-block;
   height: 100%;
